# ROS2-UR10e-Control

./: .gitignore  README.md
src/: collisions_claw.py
src/UR_pick_n_place/: package.xml  setup.cfg  setup.py
src/UR_pick_n_place/UR_pick_n_place/: pnp_node.py
src/UR_pick_n_place/config/: ur_controllers.yaml  waypoints.yaml
src/UR_pick_n_place/launch/: run_pnp.launch.py
