<?xml version="1.0"?>
<package format="3">
  <name>UR_pick_n_place</name>
  <version>0.1.0</version>
  <description>UR10e dip routine using MoveIt2</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_py</depend>
  <depend>moveit_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>